# hazm

./: .gitignore  CODING.md  README.md  data.py  dependency_parser.py  mkdocs.yml  mkdocs_macros.py  pyproject.toml
.github/workflows/: doc.yml  lint.yml  needs-reply.yml  publish.yml  test.yml
docs/: index.html
docs/content/: in-other-languages.html
docs/content/hazm/corpus_readers/: index.html  mizan_reader.html  naab_reader.html  persian_plain_text_reader.html  peykare_reader.html  treebank_reader.html  wikipedia_reader.html
docs/docs/: 404.html  custom-style.css  index.html  objects.inv  sitemap.xml
docs/docs/content/: utils.html
docs/docs/content/hazm/: chunker.html  dependency_parser.html  embedding.html  index.html  informal_normalizer.html  lemmatizer.html  normalizer.html  pos_tagger.html  sentence_tokenizer.html  sequence_tagger.html  stemmer.html  token_splitter.html  word_tokenizer.html
docs/docs/content/hazm/corpus_readers/: arman_reader.html  bijankhan_reader.html  dadegan_reader.html  degarbayan_reader.html  faspell_reader.html  hamshahri_reader.html  mirastext_reader.html  ner_reader.html  persica_reader.html  pn_summary_reader.html  quran_reader.html  sentipers_reader.html  tnews_reader.html  universal_dadegan_reader.html  verbvalency_reader.html
docs/docs/search/: search_index.js  search_index.json
docs/search/: search_index.json
documentation/: custom-style.css  index.md
documentation/content/: in-other-languages.md
documentation/content/hazm/: chunker.md  dependency_parser.md  embedding.md  index.md  lemmatizer.md  normalizer.md  pos_tagger.md
documentation/content/hazm/corpus_readers/: index.md
hazm/: __init__.py  api.py  chunker.py  constants.py  dependency_parser.py  embedding.py  informal_normalizer.py  lemmatizer.py  ner.py  normalizer.py  pos_tagger.py  sentence_tokenizer.py  sequence_tagger.py  stemmer.py  token_splitter.py  translate.py  types.py  utils.py  word_tokenizer.py
hazm/corpus_readers/: __init__.py  arman_reader.py  bijankhan_reader.py  dadegan_reader.py  degarbayan_reader.py  faspell_reader.py  hamshahri_reader.py  mirastext_reader.py  mizan_reader.py  naab_reader.py  ner_reader.py  persian_plain_text_reader.py  persica_reader.py  peykare_reader.py  pn_summary_reader.py  quran_reader.py  sentipers_reader.py  tnews_reader.py  treebank_reader.py  universal_dadegan_reader.py  verbvalency_reader.py  wiki_extractor.py  wikipedia_reader.py
samples/: keyword_extraction.py
scripts/: data_utils.py
tests/: conftest.py  test_chunker.py  test_dependency_parser.py  test_embedding.py  test_lemmatizer.py  test_pos_tagger.py  test_stemmer.py  test_word_tokenizer.py
